cncProd/force-app/main/default/objects/price_alert__c/price_alert__c.object-meta.xml
<CustomObject>
    <description>Custom object for price alert records.</description>
    <label>Price Alert</label>
    <nameField>
        <displayFormat>PA-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>