cncProd/force-app/main/default/objects/price_alert__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Price Alerts</relationshipLabel>
    <relationshipName>Price_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>