cncProd/force-app/main/default/objects/price_alert__c/fields/Opportunity_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Branch_Code__c</fullName>
    <description>Branch Code of Opportunity</description>
    <formula>TEXT(Opportunity__r.Branch_Code__c)</formula>
    <label>Opportunity Branch Code</label>
    <type>Text</type>
</CustomField>