cncProd/force-app/main/default/objects/price_alert__c/fields/PDPA__c.field-meta.xml
<CustomField>
    <fullName>PDPA__c</fullName>
    <label>PDPA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>